/**
 * Notification Integration Controller
 * Handles third-party integrations (Slack, Email, SMS)
 * 
 * @author Datifyy Engineering Team
 * @since 1.0.0
 */

import { Response, NextFunction } from 'express';
import { DataSource } from 'typeorm';
import { Logger } from '../../../../infrastructure/logging/Logger';
import { AuthenticatedRequest } from '../../../../infrastructure/middleware/authentication';
import { AdminNotificationsService } from '../services/AdminNotificationsService';
import { NotificationRepository } from '../repositories/NotificationRepository';
import { TestNotificationRequest } from '../../../../proto-types/admin/notifications';

interface ApiResponse<T = any> {
  success: boolean;
  message?: string;
  data?: T;
  error?: {
    code: string;
    message: string;
    details?: any;
  };
  metadata?: {
    requestId: string;
    timestamp: string;
    processingTime?: number;
  };
}

export class NotificationIntegrationController {
  private readonly logger: Logger;
  private readonly notificationService: AdminNotificationsService;

  constructor(
    private readonly dataSource: DataSource,
    logger?: Logger
  ) {
    this.logger = logger || Logger.getInstance();
    const notificationRepository = new NotificationRepository(this.dataSource);
    this.notificationService = new AdminNotificationsService(
      notificationRepository,
      this.logger
    );
  }

  // =============================================================================
  // SLACK INTEGRATION
  // =============================================================================

  /**
   * GET /admin/notifications/slack/channels
   * Get available Slack channels
   */
  async getSlackChannels(req: AuthenticatedRequest, res: Response, next: NextFunction): Promise<void> {
    const startTime = Date.now();
    const requestId = this.generateRequestId();

    try {
      this.logger.info('Get Slack channels request received', {
        requestId,
        adminId: req.user?.id
      });

      // TODO: Implement actual Slack API integration
      const channels = [
        { id: 'C1234567890', name: 'general' },
        { id: 'C0987654321', name: 'notifications' },
        { id: 'C1122334455', name: 'alerts' }
      ];

      const processingTime = Date.now() - startTime;

      const response: ApiResponse = {
        success: true,
        message: 'Slack channels retrieved successfully',
        data: { channels },
        metadata: {
          requestId,
          timestamp: new Date().toISOString(),
          processingTime
        }
      };

      res.status(200).json(response);

    } catch (error: any) {
      this.logger.error('Get Slack channels error', {
        requestId,
        adminId: req.user?.id,
        error: error.message
      });
      next(error);
    }
  }

  /**
   * POST /admin/notifications/slack/test-connection
   * Test Slack workspace connection
   */
  async testSlackConnection(req: AuthenticatedRequest, res: Response, next: NextFunction): Promise<void> {
    const startTime = Date.now();
    const requestId = this.generateRequestId();

    try {
      this.logger.info('Test Slack connection request received', {
        requestId,
        adminId: req.user?.id
      });

      // TODO: Implement actual Slack connection test
      const connectionResult = {
        connected: true,
        workspace: 'datifyy-team',
        botUser: 'datifyy-bot',
        permissions: ['channels:read', 'chat:write', 'users:read']
      };

      const processingTime = Date.now() - startTime;

      const response: ApiResponse = {
        success: true,
        message: 'Slack connection test successful',
        data: connectionResult,
        metadata: {
          requestId,
          timestamp: new Date().toISOString(),
          processingTime
        }
      };

      res.status(200).json(response);

    } catch (error: any) {
      this.logger.error('Test Slack connection error', {
        requestId,
        adminId: req.user?.id,
        error: error.message
      });
      next(error);
    }
  }

  /**
   * POST /admin/notifications/slack/send-message
   * Send a direct Slack message
   */
  async sendSlackMessage(req: AuthenticatedRequest, res: Response, next: NextFunction): Promise<void> {
    const startTime = Date.now();
    const requestId = this.generateRequestId();

    try {
      this.logger.info('Send Slack message request received', {
        requestId,
        adminId: req.user?.id,
        channel: req.body.channel
      });

      // TODO: Implement actual Slack message sending
      const result = {
        messageId: `msg_${Date.now()}`,
        channel: req.body.channel,
        timestamp: new Date().toISOString(),
        sent: true
      };

      const processingTime = Date.now() - startTime;

      const response: ApiResponse = {
        success: true,
        message: 'Slack message sent successfully',
        data: result,
        metadata: {
          requestId,
          timestamp: new Date().toISOString(),
          processingTime
        }
      };

      res.status(200).json(response);

    } catch (error: any) {
      this.logger.error('Send Slack message error', {
        requestId,
        adminId: req.user?.id,
        error: error.message
      });
      next(error);
    }
  }

  /**
   * GET /admin/notifications/slack/webhook-status
   * Check Slack webhook status
   */
  async getSlackWebhookStatus(req: AuthenticatedRequest, res: Response, next: NextFunction): Promise<void> {
    const startTime = Date.now();
    const requestId = this.generateRequestId();

    try {
      this.logger.info('Get Slack webhook status request received', {
        requestId,
        adminId: req.user?.id
      });

      // TODO: Implement actual webhook status check
      const webhookStatus = {
        status: 'active',
        url: 'https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX',
        lastDelivery: new Date().toISOString(),
        deliveryCount: 1247,
        errorCount: 3
      };

      const processingTime = Date.now() - startTime;

      const response: ApiResponse = {
        success: true,
        message: 'Slack webhook status retrieved successfully',
        data: webhookStatus,
        metadata: {
          requestId,
          timestamp: new Date().toISOString(),
          processingTime
        }
      };

      res.status(200).json(response);

    } catch (error: any) {
      this.logger.error('Get Slack webhook status error', {
        requestId,
        adminId: req.user?.id,
        error: error.message
      });
      next(error);
    }
  }

  // =============================================================================
  // EMAIL INTEGRATION
  // =============================================================================

  /**
   * GET /admin/notifications/email/delivery-status
   * Get email delivery statistics
   */
  async getEmailDeliveryStatus(req: AuthenticatedRequest, res: Response, next: NextFunction): Promise<void> {
    const startTime = Date.now();
    const requestId = this.generateRequestId();

    try {
      this.logger.info('Get email delivery status request received', {
        requestId,
        adminId: req.user?.id
      });

      // TODO: Implement actual email delivery status
      const deliveryStatus = {
        totalSent: 5420,
        delivered: 5335,
        bounced: 25,
        opened: 4200,
        clicked: 1800,
        deliveryRate: 98.4,
        openRate: 78.7,
        clickRate: 33.2
      };

      const processingTime = Date.now() - startTime;

      const response: ApiResponse = {
        success: true,
        message: 'Email delivery status retrieved successfully',
        data: deliveryStatus,
        metadata: {
          requestId,
          timestamp: new Date().toISOString(),
          processingTime
        }
      };

      res.status(200).json(response);

    } catch (error: any) {
      this.logger.error('Get email delivery status error', {
        requestId,
        adminId: req.user?.id,
        error: error.message
      });
      next(error);
    }
  }

  /**
   * POST /admin/notifications/email/test-send
   * Send a test email
   */
  async sendTestEmail(req: AuthenticatedRequest, res: Response, next: NextFunction): Promise<void> {
    const startTime = Date.now();
    const requestId = this.generateRequestId();

    try {
      this.logger.info('Send test email request received', {
        requestId,
        adminId: req.user?.id,
        recipient: req.body.recipient
      });

      const testRequest: TestNotificationRequest = req.body;
      
      // TODO: Implement actual test email sending
      const result = {
        messageId: `email_${Date.now()}`,
        recipient: testRequest.recipient,
        subject: 'Test Email from Datifyy Admin',
        status: 'sent',
        timestamp: new Date().toISOString()
      };

      const processingTime = Date.now() - startTime;

      const response: ApiResponse = {
        success: true,
        message: 'Test email sent successfully',
        data: result,
        metadata: {
          requestId,
          timestamp: new Date().toISOString(),
          processingTime
        }
      };

      res.status(200).json(response);

    } catch (error: any) {
      this.logger.error('Send test email error', {
        requestId,
        adminId: req.user?.id,
        error: error.message
      });
      next(error);
    }
  }

  /**
   * GET /admin/notifications/email/bounce-list
   * Get bounced email addresses
   */
  async getBounceList(req: AuthenticatedRequest, res: Response, next: NextFunction): Promise<void> {
    const startTime = Date.now();
    const requestId = this.generateRequestId();

    try {
      this.logger.info('Get bounce list request received', {
        requestId,
        adminId: req.user?.id
      });

      // TODO: Implement actual bounce list retrieval
      const bounceList = [
        {
          email: 'invalid@example.com',
          bounceType: 'hard',
          reason: 'mailbox does not exist',
          timestamp: '2024-01-15T10:30:00Z'
        },
        {
          email: 'full@example.com',
          bounceType: 'soft',
          reason: 'mailbox full',
          timestamp: '2024-01-15T11:45:00Z'
        }
      ];

      const processingTime = Date.now() - startTime;

      const response: ApiResponse = {
        success: true,
        message: 'Bounce list retrieved successfully',
        data: { bounces: bounceList },
        metadata: {
          requestId,
          timestamp: new Date().toISOString(),
          processingTime
        }
      };

      res.status(200).json(response);

    } catch (error: any) {
      this.logger.error('Get bounce list error', {
        requestId,
        adminId: req.user?.id,
        error: error.message
      });
      next(error);
    }
  }

  /**
   * POST /admin/notifications/email/suppress
   * Add email to suppression list
   */
  async suppressEmail(req: AuthenticatedRequest, res: Response, next: NextFunction): Promise<void> {
    const startTime = Date.now();
    const requestId = this.generateRequestId();

    try {
      this.logger.info('Suppress email request received', {
        requestId,
        adminId: req.user?.id,
        email: req.body.email
      });

      // TODO: Implement actual email suppression
      const result = {
        email: req.body.email,
        suppressed: true,
        reason: req.body.reason || 'manual',
        timestamp: new Date().toISOString()
      };

      const processingTime = Date.now() - startTime;

      const response: ApiResponse = {
        success: true,
        message: 'Email suppressed successfully',
        data: result,
        metadata: {
          requestId,
          timestamp: new Date().toISOString(),
          processingTime
        }
      };

      res.status(200).json(response);

    } catch (error: any) {
      this.logger.error('Suppress email error', {
        requestId,
        adminId: req.user?.id,
        error: error.message
      });
      next(error);
    }
  }

  /**
   * DELETE /admin/notifications/email/suppress/:email
   * Remove email from suppression list
   */
  async unsuppressEmail(req: AuthenticatedRequest, res: Response, next: NextFunction): Promise<void> {
    const startTime = Date.now();
    const requestId = this.generateRequestId();

    try {
      const { email } = req.params;

      this.logger.info('Unsuppress email request received', {
        requestId,
        adminId: req.user?.id,
        email
      });

      // TODO: Implement actual email unsuppression
      const result = {
        email,
        unsuppressed: true,
        timestamp: new Date().toISOString()
      };

      const processingTime = Date.now() - startTime;

      const response: ApiResponse = {
        success: true,
        message: 'Email unsuppressed successfully',
        data: result,
        metadata: {
          requestId,
          timestamp: new Date().toISOString(),
          processingTime
        }
      };

      res.status(200).json(response);

    } catch (error: any) {
      this.logger.error('Unsuppress email error', {
        requestId,
        adminId: req.user?.id,
        email: req.params.email,
        error: error.message
      });
      next(error);
    }
  }

  private generateRequestId(): string {
    return `req_${Date.now()}_${Math.random().toString(36).substring(2, 11)}`;
  }
}