/**
 * Admin Notifications Service
 * Core business logic for notification management
 * 
 * @author Datifyy Engineering Team
 * @since 1.0.0
 */

import { Logger } from '../../../../infrastructure/logging/Logger';
import { NotificationRepository } from '../repositories/NotificationRepository';
import { 
  CreateNotificationRequest,
  GetNotificationsRequest,
  UpdateNotificationRequest,
  BaseNotification,
  BulkNotificationRequest,
  BulkNotificationResponse,
  CreateNotificationTemplateRequest,
  NotificationTemplateResponse,
  TestNotificationRequest,
  NotificationAnalyticsResponse
} from '../../../../proto-types/admin/notifications';

export class AdminNotificationsService {
  constructor(
    private readonly notificationRepository: NotificationRepository,
    private readonly logger: Logger
  ) {}

  /**
   * Create and send a new notification
   */
  async createNotification(
    request: CreateNotificationRequest,
    adminId: number
  ): Promise<BaseNotification> {
    try {
      this.logger.info('Creating notification', {
        triggerEvent: request.triggerEvent,
        channels: request.channels,
        adminId
      });

      // TODO: Implement notification creation logic
      const notification: BaseNotification = {
        id: `notif_${Date.now()}`,
        triggerEvent: request.triggerEvent,
        channel: request.channels[0], // Use first channel as primary
        priority: request.priority,
        title: request.title,
        message: request.message,
        metadata: request.metadata,
        status: 'PENDING' as any,
        createdAt: new Date().toISOString(),
        retryCount: 0,
        maxRetries: 3,
        recipientAdminId: adminId,
        recipientChannel: '',
        sentAt: request.scheduledAt,
        deliveredAt: request.scheduledAt,
        failureReason: ''
      };

      // Save to database
      await this.notificationRepository.create(notification);

      // Send notification via channels
      await this.sendNotification(notification);

      return notification;

    } catch (error: any) {
      this.logger.error('Error creating notification', {
        error: error.message,
        adminId,
        triggerEvent: request.triggerEvent
      });
      throw error;
    }
  }

  /**
   * Get all notifications with filtering
   */
  async getAllNotifications(query: GetNotificationsRequest): Promise<any> {
    try {
      this.logger.info('Getting all notifications', { query });

      const result = await this.notificationRepository.findAll(query);
      
      return {
        notifications: result.data,
        total: result.total,
        page: query.pagination?.page || 1,
        limit: query.pagination?.limit || 20,
        totalPages: Math.ceil(result.total / (query.pagination?.limit || 20))
      };

    } catch (error: any) {
      this.logger.error('Error getting notifications', { error: error.message });
      throw error;
    }
  }

  /**
   * Get notification by ID
   */
  async getNotificationById(id: string): Promise<BaseNotification> {
    try {
      this.logger.info('Getting notification by ID', { id });

      const notification = await this.notificationRepository.findById(id);
      if (!notification) {
        throw new Error('Notification not found');
      }

      return notification;

    } catch (error: any) {
      this.logger.error('Error getting notification by ID', { error: error.message, id });
      throw error;
    }
  }

  /**
   * Update notification
   */
  async updateNotification(
    id: string,
    request: UpdateNotificationRequest,
    adminId: number
  ): Promise<BaseNotification> {
    try {
      this.logger.info('Updating notification', { id, adminId });

      const notification = await this.notificationRepository.update(id, request);
      if (!notification) {
        throw new Error('Notification not found');
      }

      return notification;

    } catch (error: any) {
      this.logger.error('Error updating notification', { error: error.message, id, adminId });
      throw error;
    }
  }

  /**
   * Delete notification
   */
  async deleteNotification(id: string, adminId: number): Promise<void> {
    try {
      this.logger.info('Deleting notification', { id, adminId });

      const success = await this.notificationRepository.delete(id);
      if (!success) {
        throw new Error('Notification not found');
      }

    } catch (error: any) {
      this.logger.error('Error deleting notification', { error: error.message, id, adminId });
      throw error;
    }
  }

  /**
   * Retry failed notification
   */
  async retryNotification(id: string, adminId: number): Promise<BaseNotification> {
    try {
      this.logger.info('Retrying notification', { id, adminId });

      const notification = await this.notificationRepository.findById(id);
      if (!notification) {
        throw new Error('Notification not found');
      }

      // Update retry count
      notification.retryCount += 1;
      notification.status = 'PENDING' as any;

      await this.notificationRepository.update(id, {
        notificationId: id,
        status: notification.status,
        retryCount: notification.retryCount, failureReason:notification.failureReason, deliveredAt: notification.deliveredAt
      });

      // Resend notification
      await this.sendNotification(notification);

      return notification;

    } catch (error: any) {
      this.logger.error('Error retrying notification', { error: error.message, id, adminId });
      throw error;
    }
  }

  /**
   * Send bulk notifications
   */
  async sendBulkNotifications(
    request: BulkNotificationRequest,
    adminId: number
  ): Promise<BulkNotificationResponse> {
    try {
      this.logger.info('Sending bulk notifications', {
        templateId: request.templateId,
        recipientCount: request.recipients.length,
        adminId
      });

      const batchId = `batch_${Date.now()}`;
      const notifications: BaseNotification[] = [];
      const failures: Array<{ recipient: any; error: string }> = [];

      // Process each recipient
      for (const recipient of request.recipients) {
        try {
          const notification = await this.createNotificationFromTemplate(
            request.templateId,
            recipient,
            request.priority as any,
            adminId
          );
          notifications.push(notification);
        } catch (error: any) {
          failures.push({
            recipient,
            error: error.message
          });
        }
      }

      return {
        success: true,
        batchId,
        totalRequested: 0,
        successful: 0,
        message: 'Bulk notifications sent successfully',
        results: [{
         recipient: '',
  notificationId: '',
  success: true,
  error: '',
        }]
      };

    } catch (error: any) {
      this.logger.error('Error sending bulk notifications', {
        error: error.message,
        adminId,
        templateId: request.templateId
      });
      throw error;
    }
  }

  /**
   * Retry bulk notifications
   */
  async retryBulkNotifications(notificationIds: string[], adminId: number): Promise<any> {
    try {
      this.logger.info('Retrying bulk notifications', { notificationIds, adminId });

      const results = [];
      for (const id of notificationIds) {
        try {
          const notification = await this.retryNotification(id, adminId);
          results.push({ id, status: 'success', notification });
        } catch (error: any) {
          results.push({ id, status: 'error', error: error.message });
        }
      }

      return { results };

    } catch (error: any) {
      this.logger.error('Error retrying bulk notifications', {
        error: error.message,
        adminId,
        notificationIds
      });
      throw error;
    }
  }

  /**
   * Bulk update notifications
   */
  async bulkUpdateNotifications(request: any, adminId: number): Promise<any> {
    try {
      this.logger.info('Bulk updating notifications', { adminId });

      // TODO: Implement bulk update logic
      return { updated: true };

    } catch (error: any) {
      this.logger.error('Error bulk updating notifications', {
        error: error.message,
        adminId
      });
      throw error;
    }
  }

  /**
   * Private helper methods
   */
  private async sendNotification(notification: BaseNotification): Promise<void> {
    // TODO: Implement actual notification sending logic
    // This would integrate with email, SMS, Slack, etc. services
    this.logger.info('Sending notification', {
      id: notification.id,
      channel: notification.channel
    });
  }

  private async createNotificationFromTemplate(
    templateId: string,
    recipient: any,
    priority: number,
    adminId: number
  ): Promise<BaseNotification> {
    // TODO: Implement template-based notification creation
    return {
      id: `notif_${Date.now()}_${Math.random().toString(36).substring(2, 11)}`,
      triggerEvent: 'TEMPLATE_NOTIFICATION' as any,
      channel: recipient.channel as any,
      priority: 'NORMAL' as any,
      title: 'Template Notification',
      message: 'Message from template',
      status: 'PENDING' as any,
      createdAt: new Date().toISOString(),
      retryCount: 0,
      maxRetries: 3,
      metadata: {},
      recipientAdminId: adminId
    };
  }

  // Template methods (to be implemented)
  async getAllTemplates(): Promise<NotificationTemplateResponse[]> {
    return [];
  }

  async createTemplate(request: CreateNotificationTemplateRequest, adminId: number): Promise<NotificationTemplateResponse> {
    throw new Error('Method not implemented');
  }

  async getTemplateById(id: string): Promise<NotificationTemplateResponse> {
    throw new Error('Method not implemented');
  }

  async updateTemplate(id: string, request: any, adminId: number): Promise<NotificationTemplateResponse> {
    throw new Error('Method not implemented');
  }

  async deleteTemplate(id: string, adminId: number): Promise<void> {
    throw new Error('Method not implemented');
  }

  async duplicateTemplate(id: string, name: string, adminId: number): Promise<NotificationTemplateResponse> {
    throw new Error('Method not implemented');
  }

  async testTemplate(id: string, request: TestNotificationRequest, adminId: number): Promise<any> {
    throw new Error('Method not implemented');
  }

  // Analytics methods (to be implemented)
  async getNotificationAnalytics(query: any): Promise<NotificationAnalyticsResponse> {
    return {
      success: true,
      message: 'Analytics retrieved successfully',
      data: {
        totalNotifications: 0,
        totalSent: 0,
        totalDelivered: 0,
        totalFailed: 0,
        deliveryRate: 0,
        averageDeliveryTime: 0,
        channelPerformance: {},
        eventPerformance: {},
        trends: []
      }
    };
  }

  async getPerformanceMetrics(query: any): Promise<any> {
    return {};
  }

  async getEngagementMetrics(query: any): Promise<any> {
    return {};
  }

  async getCostAnalysis(query: any): Promise<any> {
    return {};
  }

  async getFailureAnalysis(query: any): Promise<any> {
    return {};
  }

  async getChannelPerformance(query: any): Promise<any> {
    return {};
  }

  async getDeliveryTrends(query: any): Promise<any> {
    return {};
  }

  async getNotificationSummary(query: any): Promise<any> {
    return {};
  }
}